--- a/src/style/general.css
+++ b/src/style/general.css
@@ -131,4 +131,37 @@ img {
     font-size: 1.125rem;
   }
 }
+
+@media screen and (min-width: 768px) {
+  header {
+    padding: 3rem 1.5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  header .header--mobile--menu--toggle {
+    display: none;
+  }
+  header .header--nav--ul {
+    list-style-type: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    border: 1px solid red;
+    gap: 2rem;
+  }
+  header .header--nav--ul .invisible--li {
+    display: none;
+  }
+  header .header--nav--ul a {
+    color: #00ad6a;
+    font-weight: 700;
+  }
+}
 /*# sourceMappingURL=general.css.map */
